--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-crewai
-langchain-community
-langchain-google-genai
+crewai==0.11.0
+langchain==0.1.4
+langchain-community==0.0.16
+langchain-google-genai==0.0.5
 streamlit
-duckduckgo-search
+duckduckgo-search==4.2
 feedparser
 beautifulsoup4
 requests
